alpha/styles/foundation/_base.scss
@use "colors" as c;
@use "breakpoints" as b;

* {
  margin: 0;
  box-sizing: border-box;
  text-underline-offset: 0.15em;
  &::before,
  &::after {
    box-sizing: border-box;
  }
}

* + * {
  margin-top: 1rem;
}

::selection {
  background: c.$grey-100;
}

#query-on-demand-indicator-element {
  margin: 0;
}

html,
body {
  overflow-x: hidden;
  position: relative;
}

html {
  font-family: "Brandon Grotesque", sans-serif;
  font-size: 62.5%;
  scroll-behavior: smooth;
  margin: 0;
}

body {
  margin: 0;
  background: c.$grey-000;
  color: c.$grey-550;
}

main {
  position: relative;
  min-height: 350px;
  z-index: 5;
}

footer {
  position: relative;
  z-index: 1;
}

h1 {
  font-size: 5em;
  font-weight: 800;
  text-transform: uppercase;
  color: c.$grey-700;
  margin: 0;
  line-height: 1;
  @include b.mq(sm) {
    font-size: 4.2em;
  }
}

h2 {
  font-size: 5.4em;
  font-weight: 800;
  color: c.$grey-600;
  margin: 0;
  line-height: 1.3;
  @include b.mq(sm) {
    font-size: 3em;
    line-height: 1.1;
  }
}

h3 {
  font-size: 3.1em;
  font-weight: 300;
  color: c.$grey-600;
  margin: 0;
  line-height: 1;
  @include b.mq(sm) {
    font-size: 2em;
    line-height: 1.5;
  }
}

h4 {
  font-size: 4em;
  font-weight: 700;
  color: c.$grey-600;
  margin: 0 0 2.2rem;
  line-height: 1;
  @include b.mq(sm) {
    font-size: 3.5em;
    line-height: 1.2;
  }
}

p {
  font-size: 2.4rem;
  line-height: 1.47;
  margin-bottom: 1em;
  @include b.mq(sm) {
    font-size: 2rem;
  }
}

ul {
  padding: 0 0 2rem 3rem;
}

li {
  font-size: 2.4rem;
  @include b.mq(sm) {
    font-size: 2rem;
  }
}

b,
strong {
  color: c.$grey-600;
}

a {
  text-decoration: none;
  color: c.$grey-600;
}

p a {
  font-weight: 500;
  color: c.$grey-600;
  background: c.$grey-050;
  transition:
    color 0.5s ease-in-out,
    background 0.5s ease-in-out;
  &:hover {
    color: c.$grey-700;
    background: c.$grey-100;
    transition:
      color 0.5s ease-in-out,
      background 0.5s ease-in-out;
  }
}

blockquote {
  font-size: 2.1em;
  font-style: italic;
  margin: 1em 1.5em;
  padding: 0 1.5em;
  line-height: 1.3;
  border-left: 0.4rem solid rgba(c.$grey-500, 0.5);
}

.relative {
  position: relative;
}

.sidebarContainer {
  display: grid;
  grid-template-columns: 3fr 1fr;
  @include b.mq(lg) {
    grid-template-columns: 1fr;
  }
}

[type=checkbox] {
  width: auto;
}

.formNames {
  display: grid;
  grid-template-columns: 1fr 1fr 1fr;
  &:nth-child(2) div {
    margin-top: 0;
  }
  &:nth-child(3) div {
    margin-top: 0;
  }
}

.sidebar {
  background: rgba(c.$grey-050, 0.8);
  margin-top: -8rem;
  margin-bottom: -23rem;
  @include b.mq(lg) {
    display: none;
  }
}

.portableContainer {
  width: 75%;
  margin: 0 auto;
  @include b.mq(lg) {
    width: 81.25%;
  }
}

.subTitle {
  font-size: 3rem;
  @include b.mq(sm) {
    font-size: 2.6em;
  }
}

.caption {
  font-size: 1.6rem;
  text-align: right;
  color: c.$grey-650;
  @include b.mq(sm) {
    font-size: 1.2rem;
  }
}

.container {
  position: relative;
  max-width: 108rem;
  margin: 0 auto;
  z-index: 3;
}

.bold {
  font-weight: 800;
}

.imageGrid,
.galleryImageGrid,
.pastEventsImageGrid {
  display: grid;
  grid-template-columns: 1fr 1fr 1fr;
  gap: 3rem;
  width: 81.25%;
  margin: auto;
  z-index: 5;
  @include b.mq(lg) {
    grid-template-columns: 1fr 1fr;
  }
  @include b.mq(sm) {
    grid-template-columns: 1fr;
  }
}

.eventsImageGrid {
  display: grid;
  gap: 3rem;
  grid-template-columns: repeat(calc(33.33% - 3rem));
  grid-auto-flow: column;
  grid-auto-columns: calc(33.33% - 3rem);
  overflow-x: scroll;
  z-index: 5;
  width: 81.25%;
  scrollbar-color: transparent;
  &::-webkit-scrollbar {
    display: none;
  }
  @include b.mq(lg) {
    grid-template-columns: repeat(calc(50% - 3rem));
    grid-auto-columns: calc(50% - 3rem);
  }
  @include b.mq(sm) {
    grid-template-columns: 1fr;
  }
}

.imageGrid {
  margin: 6rem auto 0;
}

.eventsImageGrid {
  margin: 0 auto 0;
}

.exhibitionPreviewGrid {
  width: 81.25%;
  display: flex;
  margin: auto;
  // gap: 3rem;
  @include b.mq(md) {
    flex-direction: column;
  }
}

.exhibitionPreview {
  width: 50%;
  margin-top: 0;
  margin-right: 3rem;
  &:last-child {
    margin-right: 0;
  }
  @include b.mq(md) {
    width: 100%;
  }
}

.exhibitionGrid {
  display: grid;
  grid-template-columns: 1fr 1fr 1fr;
  gap: 3rem;
  width: 81.25%;
  margin: auto;
  z-index: 5;
  @include b.mq(lg) {
    grid-template-columns: 1fr 1fr;
  }
  @include b.mq(sm) {
    grid-template-columns: 1fr;
  }
}

.gridImage {
  aspect-ratio: 1 / 1;
  transition: opacity 0.3s ease;
  cursor: pointer;
  &:hover,
  &:active {
    opacity: 0.87;
    transition: opacity 0.3s ease;
  }
}

.gridCaption {
  font-size: 1.8rem;
  color: c.$grey-700;
  text-align: right;
  margin: 0.6em 0 0.6em;
}

.postNavigation {
  display: flex;
  margin-top: 6rem;
  align-items: flex-end;
  & > p {
    margin: 0;
    width: 100%;
  }
  a,
  a:hover {
    background: transparent;
  }
}

.backLink {
  text-align: center;
}

.nextLink {
  text-align: right;
}

.embedContainer {
  position: relative;
  padding-bottom: 56.25%;
  height: 0;
  overflow: hidden;
  max-width: 100%;
  margin-bottom: 5rem;
}
.embedContainer iframe,
.embedContainer object,
.embedContainer embed {
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
}

.sidebarContent {
  padding: 6rem 5rem;
  h3 {
    font-weight: 500;
    line-height: 1.2;
    margin-bottom: 0.7em;
    color: c.$grey-700;
    @include b.mq(xl) {
      font-size: 3rem;
    }
  }
  a {
    text-decoration: underline;
    text-decoration-thickness: 0.1em;
    text-decoration-color: rgba(c.$grey-050, 0.8);
    transition: text-decoration-color 0.3s ease-in-out;
  }
  a:hover {
    text-decoration: underline;
    text-decoration-thickness: 0.1em;
    text-decoration-color: c.$grey-500;
    transition: text-decoration-color 0.3s ease-in-out;
  }
}

.sidebarMenu {
  font-size: 2.2rem;
  @include b.mq(xl) {
    font-size: 2rem;
  }
  line-height: 1.3;
  padding: 0;
  list-style: none;
  margin-bottom: 5rem;
  li {
    margin-bottom: 1em;
  }
}

// **** artist page and exhibition page ****

.galleryMenu {
  font-size: 2.2rem;
  list-style: none;
  margin: 0;
  padding: 0;
  display: flex;
  li {
    list-style: none;
    cursor: pointer;
    margin: 0;
    padding: 0 5rem 0 0;
  }
}

.galleryMenu li.selected {
  text-decoration: underline;
  text-decoration-thickness: 0.1em;
  cursor: default;
}

.galleryImageGrid {
  margin: 5rem auto 0;
}

.galleryInfo {
  padding-bottom: 6rem;
  margin: 5rem auto 0;
}

.hidden {
  display: none;
}

// ***** modal lightbox on gallery pages *****

.modalContainer {
  position: fixed;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  margin: 0;
  width: 100vw;
  height: 100vh;
  background: rgba(white, 0.75);
  z-index: 7;
  overflow: auto;
  display: flex;
  font-size: 1rem;
}

.hideModal {
  display: none;
}

.modalImageContiner {
  background: white;
  padding: 2rem;
  margin: auto;
  display: inline-block;
  z-index: 7;
}

.modalImageWrapper {
  position: relative;
  height: 80vh;
}

.modalCaption {
  font-size: 1.8rem;
  margin-bottom: 0;
  text-align: right;
  z-index: 7;
  @include b.mq(sm) {
    font-size: 1.6rem;
  }
}

.handleClose {
  position: absolute;
  z-index: 8;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  margin: 0;
  width: 100vw;
  height: 100vh;
}

.modalClose,
.btnNext,
.btnPrev {
  width: 4rem;
  position: absolute;
  z-index: 9;
  cursor: pointer;
  opacity: 0.7;
  transition: opacity 0.3s ease;
  @include b.mq(sm) {
    display: none;
  }
  &:hover {
    opacity: 1;
    transition: opacity 0.3s ease;
  }
}

.btnNext,
.btnPrev {
  top: 50%;
  transform: translateY(-50%);
  width: 2.5rem;
}

.modalClose {
  right: 3em;
  top: 2em;
}

.btnNext {
  right: 3em;
}

.btnPrev {
  left: 3em;
}

// ********** scroll up **********

.scrollupContainer {
  width: 5rem;
  height: 5rem;
  background: rgba(c.$grey-000, 0.9);
  position: fixed;
  bottom: 3rem;
  right: 3rem;
  z-index: 6;
  padding: 1.6rem 0.8rem;
  border-radius: 3px;
  box-shadow: 2px 2px 0 rgba(black, 0.1);
  &::after {
    content: "";
    position: absolute;
    top: 0;
    right: 0;
    bottom: 0;
    left: 0;
    box-shadow: 2px 2px 0 rgba(black, 0.1);
    opacity: 0;
    transition: opacity 0.3s;
  }
  &:hover::after {
    opacity: 1;
    transition: opacity 0.3s;
  }
}

.scrollup {
  margin-top: 0;
}

// ********** accessibility **********

// text meant only for screen readers
.screenReaderText {
  border: 0;
  clip: rect(1px, 1px, 1px, 1px);
  clip-path: inset(50%);
  height: 1px;
  margin: -1px;
  overflow: hidden;
  padding: 0;
  position: absolute !important;
  width: 1px;
  word-wrap: normal !important;
}

.screenReaderText:focus {
  background-color: #f1f1f1;
  border-radius: 3px;
  box-shadow: 0 0 2px 2px rgba(0, 0, 0, 0.6);
  clip: auto !important;
  clip-path: none;
  color: #21759b;
  display: block;
  font-size: 0.875rem;
  font-weight: 700;
  height: auto;
  left: 5px;
  line-height: normal;
  padding: 15px 23px 14px;
  text-decoration: none;
  top: 5px;
  width: auto;
  z-index: 100000;
}

